assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family=Zen+Kaku+Gothic+Antique&display=swap');

* {
    margin: 0;
    padding: 0;
    border: none;
}

:root {
    --primary-color: sandybrown;
    --secondary-color: #56727C;
    --tertiary-color: rgb(25, 126, 193);
    --quaternary-color: RGB(234, 227, 210);


    --primary-font-family: 'Zen Kaku Gothic Antique',
        sans-serif;
    --secondary-font-family: 'IBM Plex Serif',
        serif;

}

body {
    font-family: var(--primary-font-family);
    color: var(--primary-color);
    background-color: RGB(234, 227, 210);

}

/*Logo and Headings*/

h1 {
    font-family: var(--primary-font-family);
    text-transform: uppercase;
    color: var(--primary-color);
}

h2 {
    font-family: var(--primary-font-family);
    text-transform: uppercase;
    color: var(--tertiary-color);
    text-align: center;
}

h3 {
    font-family: var(--secondary-font-family);
}

.heading-margin {
    margin-bottom: 15px;
    margin-top: 30px;

}

#logo {
    font-size: 250%;
    letter-spacing: 4px;
    font-weight: 600;

}

/* navigation links */

nav>a {
    text-decoration: none;
}

nav {
    border: 1px solid var(--primary-color);
    background-color: var(--secondary-color);
    display: flex;
    justify-content: space-between;
    padding-left: 10px;
}

#menu {
    font-size: 150%;
    display: flex;
    align-items: right;
}

#menu,
#logo {
    line-height: 75px;

}

#menu li {
    list-style-type: none;
    margin-right: 30px;
}

#menu a {
    text-decoration: none;
    color: inherit;
}

#menu a:hover {
    border-bottom: 1px solid var(--primary-color);
}

.active {
    border-bottom: 1px solid var(--primary-color);
}

/* Main Image and Intro*/
#main {
    margin-bottom: 100px;
}

#main-title {
    font-size: 250%;
}

#main-image {
    height: 600px;
    width: 100%;
    background-image: url('../images/main-image.jpg');
    background-size: cover;
    background-position: center center;
    overflow: hidden;
    border: 2px solid var(--primary-color);
    position: relative;


}

#intro {
    background-color: rgba(86, 114, 124, 0.7);
    height: 300px;
    width: 300px;
    position: absolute;
    right: 45px;
    bottom: 45px;
    padding: 10px;
    font-size: 125%;
    border-radius: 10px;

}


/*main section/vacation-details*/

#vacation-details {
    background-image: url('../images/house-wide.jpg');
    background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
    border: 2px solid var(--primary-color);
    border-radius: 10px;

    margin: 0 auto;
    height: 450px;
    width: 70%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;

}

#facilities,
#distance {
    height: 300px;
    width: 20%;
    margin-top: 15;
    padding: 10px;
    border-radius: 10px;

    background: rgba(25, 126, 193, 0.7);


    font-size: 150%;
    font-weight: 700;
    line-height: 45px;
    color: var(--quaternary-color);
}

#facilities>h3,
#distance>h3 {
    margin-top: 10px;
}

#distance>ul,
#facilities>ul {
    list-style: none;
}

#book-now>a {
    text-decoration: none;
    color: var(--quaternary-color);

}

#book-now {
    text-align: center;
    background-color: rgba(25, 126, 193, 0.7);
    height: 200px;
    width: 200px;
    border-radius: 50%;

    font-size: 200%;
    font-weight: 700;
    line-height: 200px;
}



/*map*/
#map>iframe {
    border: 2px solid var(--primary-color);
    border-radius: 10px;
    margin: auto;
    display: block;
}


/* footer */
footer {
    width: 100%;
    position: fixed;
    bottom: 0;

}

footer>ul {
    line-height: 50px;
    border: 2px solid var(--primary-color);
    background-color: var(--secondary-color);

}

#footer-contacts {

    display: flex;
    align-items: center;
    justify-content: space-evenly;
    padding: 10px;

}

#footer-contacts>li {
    list-style-type: none;
    display: flex;
    justify-content: space-between;
    padding-left: 10px;
}

#footer-contacts>li>a {
    color: var(--primary-color);
    font-size: 200%;
}

/*Booking page*/

#book-background {
    height: 750px;
    width: 100%;
    background-image: url('../images/book-main.jpg');
    background-size: cover;
    background-position: center center;
    overflow: hidden;
    border: 2px solid var(--primary-color);
    position: relative;
}

/*form*/
#form {
    color: var(--quaternary-color);
    height: 350px;
    width: 550px;
    position: absolute;
    left: 10%;
    top: 10%;
    padding: 10px;
    font-size: 125%;
    border-radius: 10px;
    background-color: rgba(25, 126, 193, 0.7);
    line-height: 30px;
}

#book-flexbox {
    margin-top: 30px;
    display: flex;
    justify-content: space-between;
}

#form>h2 {
    flex: none;
    color: var(--quaternary-color);
    text-align: center;
}

#form-column1>label,
#form-column2>label {
    display: block;

}

#form-column1>input,
#form-column2>input {
    width: 250px;
    padding: 10px;
}

#buttons {
    flex: none;
}

#buttons>input,
#buttons>button {
    margin-top: 31px;
    font-weight: 700;
    font-size: 120%;
    font-family: var(--primary-font-family);
    color: var(--primary-color);
    background-color: var(--secondary-color);
    border: 2px solid var(--primary-color);
    padding: 4px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 10px;
}

#buttons input:hover {
    color: var(--quaternary-color);
    border: 2px solid var(--quaternary-color);
}

#buttons button:hover {
    color: var(--quaternary-color);
    border: 2px solid var(--quaternary-color);
}

